// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CampaignDetails creation form for empty manual campaign 1`] = `
<React.Fragment>
  <PageTitle
    title="New campaign"
  />
  <Form
    className="e2e-campaign-form position-relative"
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <CampaignActionsBar
      mode="editing"
      onClose={[Function]}
      onDelete={[Function]}
      onEdit={[Function]}
      previewingCampaignPlan={false}
    />
    <React.Fragment>
      <h3>
        Details
      </h3>
      <CampaignTitleField
        className="e2e-campaign-title"
        disabled={false}
        onChange={[Function]}
        value=""
      />
      <CampaignDescriptionField
        disabled={false}
        onChange={[Function]}
        value=""
      />
    </React.Fragment>
    <React.Fragment>
      <div
        className="mt-2"
      >
        <button
          className="btn btn-primary"
          disabled={false}
          type="submit"
        >
          Create
        </button>
      </div>
    </React.Fragment>
  </Form>
</React.Fragment>
`;

exports[`CampaignDetails creation form given existing plan 1`] = `
Array [
  <form
    className="e2e-campaign-form position-relative "
    onInvalid={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="d-flex mb-2"
    >
      <h2
        className="m-0"
      >
        <CampaignsIcon
          className="icon-inline campaign-actions-bar__campaign-icon text-muted mr-2"
        />
        <span>
          <a
            href="/campaigns"
          >
            Campaigns
          </a>
        </span>
        <span
          className="text-muted d-inline-block mx-2"
        >
          /
        </span>
        <span>
          New campaign
        </span>
      </h2>
      <span
        className="flex-grow-1 d-flex justify-content-end align-items-center"
      />
    </div>
    <h3>
      Details
    </h3>
    <CampaignTitleField
      className="e2e-campaign-title"
      disabled={false}
      onChange={[Function]}
      value=""
    />
    <CampaignDescriptionField
      disabled={false}
      onChange={[Function]}
      value=""
    />
    <div
      className="form-group mt-2"
    >
      <label>
        Branch name
         
        <small>
          <svg
            className="mdi-icon icon-inline"
            data-tooltip="If a branch with the given name already exists, a fallback name will be created by appending a count. Example: \\"my-branch-name\\" becomes \\"my-branch-name-1\\"."
            fill="currentColor"
            height={24}
            viewBox="0 0 24 24"
            width={24}
          >
            <path
              d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
            />
          </svg>
        </small>
      </label>
      <input
        className="form-control"
        disabled={false}
        onChange={[Function]}
        placeholder="my-awesome-campaign"
        required={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="mt-2"
    >
      <button
        className="btn btn-secondary mr-1"
        disabled={false}
        onClick={[Function]}
        type="submit"
      >
        Create draft
      </button>
      <button
        className="btn btn-primary"
        disabled={false}
        type="submit"
      >
        Create
      </button>
    </div>
  </form>,
  <h3
    className="mt-4 d-flex align-items-end mb-0"
  >
    2
     
    Patches
     
  </h3>,
  <CampaignChangesets
    campaign={
      Object {
        "__typename": "CampaignPlan",
        "changesetPlans": Object {
          "nodes": Array [],
          "totalCount": 2,
        },
        "id": "c",
        "status": Object {
          "completedCount": 3,
          "errors": Array [
            "a",
          ],
          "pendingCount": 3,
          "state": "PROCESSING",
        },
      }
    }
    campaignUpdates={
      Subject {
        "_isScalar": false,
        "closed": false,
        "hasError": false,
        "isStopped": false,
        "observers": Array [],
        "thrownError": null,
      }
    }
    changesetUpdates={
      Subject {
        "_isScalar": false,
        "closed": false,
        "hasError": false,
        "isStopped": false,
        "observers": Array [],
        "thrownError": null,
      }
    }
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": undefined,
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": undefined,
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    isLightTheme={true}
    location={
      Object {
        "hash": "",
        "key": undefined,
        "pathname": "/",
        "search": "plan=p",
        "state": undefined,
      }
    }
  />,
]
`;

exports[`CampaignDetails editing existing 1`] = `
Array [
  <form
    className="e2e-campaign-form position-relative "
    onInvalid={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="d-flex mb-2"
    >
      <h2
        className="m-0"
      >
        <span
          className="badge badge-success mr-2"
        >
          <CampaignsIcon
            className="icon-inline campaign-actions-bar__campaign-icon"
          />
           Open
        </span>
        <span>
          <a
            href="/campaigns"
          >
            Campaigns
          </a>
        </span>
        <span
          className="text-muted d-inline-block mx-2"
        >
          /
        </span>
        <span>
          n
        </span>
      </h2>
      <span
        className="flex-grow-1 d-flex justify-content-end align-items-center"
      >
        <button
          className="btn btn-primary mr-1"
          disabled={false}
          type="submit"
        >
          Save
        </button>
        <button
          className="btn btn-secondary"
          disabled={false}
          type="reset"
        >
          Cancel
        </button>
      </span>
    </div>
    <h3>
      Details
    </h3>
    <CampaignTitleField
      className="e2e-campaign-title"
      disabled={false}
      onChange={[Function]}
      value="n"
    />
    <CampaignDescriptionField
      disabled={false}
      onChange={[Function]}
      value="d"
    />
  </form>,
  <h3
    className="mt-4 d-flex align-items-end mb-0"
  >
    2
     
    Patches
    <span
      className="mx-1"
    >
      /
    </span>
    2
     
    Changesets
     
  </h3>,
  <CampaignChangesets
    campaign={
      Object {
        "__typename": "Campaign",
        "author": Object {
          "username": "alice",
        },
        "branch": "awesome-branch",
        "changesetCountsOverTime": Array [],
        "changesetPlans": Object {
          "nodes": Array [],
          "totalCount": 2,
        },
        "changesets": Object {
          "nodes": Array [],
          "totalCount": 2,
        },
        "closedAt": null,
        "createdAt": "2020-01-01",
        "description": "d",
        "id": "c",
        "name": "n",
        "plan": Object {
          "id": "p",
        },
        "publishedAt": "2020-01-01",
        "status": Object {
          "completedCount": 3,
          "errors": Array [
            "a",
          ],
          "pendingCount": 3,
          "state": "PROCESSING",
        },
        "updatedAt": "2020-01-01",
        "viewerCanAdminister": true,
      }
    }
    campaignUpdates={
      Subject {
        "_isScalar": false,
        "closed": false,
        "hasError": false,
        "isStopped": false,
        "observers": Array [],
        "thrownError": null,
      }
    }
    changesetUpdates={
      Subject {
        "_isScalar": false,
        "closed": false,
        "hasError": false,
        "isStopped": false,
        "observers": Array [],
        "thrownError": null,
      }
    }
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": undefined,
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": undefined,
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    isLightTheme={true}
    location={
      Object {
        "hash": "",
        "key": undefined,
        "pathname": "/",
        "search": "",
        "state": undefined,
      }
    }
  />,
]
`;

exports[`CampaignDetails viewerCanAdminister: false viewing existing 1`] = `
Array [
  <form
    className="e2e-campaign-form position-relative "
    onInvalid={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="d-flex mb-2"
    >
      <h2
        className="m-0"
      >
        <span
          className="badge badge-success mr-2"
        >
          <CampaignsIcon
            className="icon-inline campaign-actions-bar__campaign-icon"
          />
           Open
        </span>
        <span>
          <a
            href="/campaigns"
          >
            Campaigns
          </a>
        </span>
        <span
          className="text-muted d-inline-block mx-2"
        >
          /
        </span>
        <span>
          n
        </span>
      </h2>
      <span
        className="flex-grow-1 d-flex justify-content-end align-items-center"
      />
    </div>
    CampaignStatus(state=PROCESSING)
    <div
      className="card mt-2"
    >
      <div
        className="card-header"
      >
        <strong>
           
          alice
        </strong>
         
        started 
        <span
          className="timestamp"
          data-tooltip="2020-01-01"
        >
          in almost 14 years
        </span>
      </div>
      <div
        className="card-body"
      >
        <div
          className="markdown"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>d</p>
",
            }
          }
        />
      </div>
    </div>
  </form>,
  <h3
    className="mt-4 mb-2"
  >
    Progress
  </h3>,
  <p>
    <em>
      Burndown chart will be shown when there is more than 1 day of data.
    </em>
  </p>,
  <h3
    className="mt-4 d-flex align-items-end mb-0"
  >
    2
     
    Patches
    <span
      className="mx-1"
    >
      /
    </span>
    2
     
    Changesets
     
  </h3>,
  <CampaignChangesets
    campaign={
      Object {
        "__typename": "Campaign",
        "author": Object {
          "username": "alice",
        },
        "branch": "awesome-branch",
        "changesetCountsOverTime": Array [],
        "changesetPlans": Object {
          "nodes": Array [],
          "totalCount": 2,
        },
        "changesets": Object {
          "nodes": Array [],
          "totalCount": 2,
        },
        "closedAt": null,
        "createdAt": "2020-01-01",
        "description": "d",
        "id": "c",
        "name": "n",
        "plan": Object {
          "id": "p",
        },
        "publishedAt": "2020-01-01",
        "status": Object {
          "completedCount": 3,
          "errors": Array [
            "a",
          ],
          "pendingCount": 3,
          "state": "PROCESSING",
        },
        "updatedAt": "2020-01-01",
        "viewerCanAdminister": false,
      }
    }
    campaignUpdates={
      Subject {
        "_isScalar": false,
        "closed": false,
        "hasError": false,
        "isStopped": false,
        "observers": Array [],
        "thrownError": null,
      }
    }
    changesetUpdates={
      Subject {
        "_isScalar": false,
        "closed": false,
        "hasError": false,
        "isStopped": false,
        "observers": Array [],
        "thrownError": null,
      }
    }
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": undefined,
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": undefined,
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    isLightTheme={true}
    location={
      Object {
        "hash": "",
        "key": undefined,
        "pathname": "/",
        "search": "",
        "state": undefined,
      }
    }
  />,
]
`;

exports[`CampaignDetails viewerCanAdminister: true viewing existing 1`] = `
Array [
  <form
    className="e2e-campaign-form position-relative "
    onInvalid={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="d-flex mb-2"
    >
      <h2
        className="m-0"
      >
        <span
          className="badge badge-success mr-2"
        >
          <CampaignsIcon
            className="icon-inline campaign-actions-bar__campaign-icon"
          />
           Open
        </span>
        <span>
          <a
            href="/campaigns"
          >
            Campaigns
          </a>
        </span>
        <span
          className="text-muted d-inline-block mx-2"
        >
          /
        </span>
        <span>
          n
        </span>
      </h2>
      <span
        className="flex-grow-1 d-flex justify-content-end align-items-center"
      >
        <button
          className="btn btn-secondary mr-1"
          disabled={true}
          id="e2e-campaign-edit"
          onClick={[Function]}
          type="button"
        >
          Edit
        </button>
        <details
          className="campaign-prompt__details"
        >
          <summary>
            <span
              className="btn dropdown-toggle btn-secondary mr-1 disabled"
              data-tooltip="Cannot close while campaign is being created"
              onClick={[Function]}
            >
              Close
            </span>
          </summary>
          <div
            className="position-absolute campaign-prompt__details-menu"
          >
            <div
              className="card mt-1"
            >
              <div
                className="card-body"
              >
                <p>
                  Close campaign 
                  <strong>
                    n
                  </strong>
                  ?
                </p>
                <button
                  className="btn mr-1 btn-secondary mr-1"
                  disabled={true}
                  onClick={[Function]}
                  type="button"
                >
                  Close
                </button>
              </div>
            </div>
          </div>
        </details>
        <details
          className="campaign-prompt__details"
        >
          <summary>
            <span
              className="btn dropdown-toggle btn-danger disabled"
              data-tooltip="Cannot delete while campaign is being created"
              onClick={[Function]}
            >
              Delete
            </span>
          </summary>
          <div
            className="position-absolute campaign-prompt__details-menu"
          >
            <div
              className="card mt-1"
            >
              <div
                className="card-body"
              >
                <p>
                  Delete campaign 
                  <strong>
                    n
                  </strong>
                  ?
                </p>
                <button
                  className="btn mr-1 btn-danger"
                  disabled={true}
                  onClick={[Function]}
                  type="button"
                >
                  Delete
                </button>
              </div>
            </div>
          </div>
        </details>
      </span>
    </div>
    CampaignStatus(state=PROCESSING)
    <div
      className="card mt-2"
    >
      <div
        className="card-header"
      >
        <strong>
           
          alice
        </strong>
         
        started 
        <span
          className="timestamp"
          data-tooltip="2020-01-01"
        >
          in almost 14 years
        </span>
      </div>
      <div
        className="card-body"
      >
        <div
          className="markdown"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>d</p>
",
            }
          }
        />
      </div>
    </div>
  </form>,
  <h3
    className="mt-4 mb-2"
  >
    Progress
  </h3>,
  <p>
    <em>
      Burndown chart will be shown when there is more than 1 day of data.
    </em>
  </p>,
  <h3
    className="mt-4 d-flex align-items-end mb-0"
  >
    2
     
    Patches
    <span
      className="mx-1"
    >
      /
    </span>
    2
     
    Changesets
     
  </h3>,
  <CampaignChangesets
    campaign={
      Object {
        "__typename": "Campaign",
        "author": Object {
          "username": "alice",
        },
        "branch": "awesome-branch",
        "changesetCountsOverTime": Array [],
        "changesetPlans": Object {
          "nodes": Array [],
          "totalCount": 2,
        },
        "changesets": Object {
          "nodes": Array [],
          "totalCount": 2,
        },
        "closedAt": null,
        "createdAt": "2020-01-01",
        "description": "d",
        "id": "c",
        "name": "n",
        "plan": Object {
          "id": "p",
        },
        "publishedAt": "2020-01-01",
        "status": Object {
          "completedCount": 3,
          "errors": Array [
            "a",
          ],
          "pendingCount": 3,
          "state": "PROCESSING",
        },
        "updatedAt": "2020-01-01",
        "viewerCanAdminister": true,
      }
    }
    campaignUpdates={
      Subject {
        "_isScalar": false,
        "closed": false,
        "hasError": false,
        "isStopped": false,
        "observers": Array [],
        "thrownError": null,
      }
    }
    changesetUpdates={
      Subject {
        "_isScalar": false,
        "closed": false,
        "hasError": false,
        "isStopped": false,
        "observers": Array [],
        "thrownError": null,
      }
    }
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": undefined,
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": undefined,
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    isLightTheme={true}
    location={
      Object {
        "hash": "",
        "key": undefined,
        "pathname": "/",
        "search": "",
        "state": undefined,
      }
    }
  />,
]
`;
